// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Given Bruger Menu on Product Landing Page Render Bruger Menu 1`] = `
<div>
  <WithStyles(ForwardRef(Button))
    aria-haspopup="true"
    aria-label="actions menu list"
    className="btn-listmemu "
    onClick={[Function]}
    size="small"
    startIcon={
      <WithStyles(ForwardRef(SvgIcon))
        component={[Function]}
        viewBox="0 0 20 20"
      />
    }
    variant="contained"
  />
  <ForwardRef(Popper)
    anchorEl={null}
    className="actions-popper"
    disablePortal={true}
    open={false}
    placement="bottom-end"
    transition={true}
  >
    <Component />
  </ForwardRef(Popper)>
</div>
`;

exports[`Given Search Input on Product Landing Page Render Search Input onChange 1`] = `
<ForwardRef(OutlinedInput)
  className="searchinput"
  id="SearchInput"
  inputProps={
    Object {
      "aria-label": "search",
    }
  }
  onChange={[Function]}
  placeholder="Search"
  startAdornment={
    <ForwardRef(InputAdornment)
      className="adornment"
      position="start"
    >
      <ForwardRef(IconButton)
        aria-label="search"
        edge="start"
      >
        <DropSearchIcon />
      </ForwardRef(IconButton)>
    </ForwardRef(InputAdornment)>
  }
  style={
    Object {
      "width": "100%",
    }
  }
  type="text"
  value=""
/>
`;

exports[`Given Sortby Menu on Product Landing Page Render Sortby Menu 1`] = `
<div>
  <WithStyles(ForwardRef(Button))
    aria-haspopup="true"
    aria-label="sortby menu list"
    className="btn-sortby "
    onClick={[Function]}
    startIcon={<Memo />}
  >
    buttons.sort by
  </WithStyles(ForwardRef(Button))>
  <ForwardRef(Popper)
    anchorEl={null}
    className="sortby-popper"
    data-testid="sortby-dropdown"
    disablePortal={true}
    open={false}
    placement="bottom-start"
    transition={true}
  >
    <Component />
  </ForwardRef(Popper)>
</div>
`;
